# AI-mini-project

./: .gitignore  EVALUATION_REPORT.md  README.md  app.py  pyproject.toml  requirement.txt
evaluation/: gold_report.md  retrieval_evalset.json
notebooks/: 01-state-and-schema.ipynb  02-rag-agent.ipynb  03-web-search-agent.ipynb  04-evidence-analyzer.ipynb  05-draft-and-review.ipynb  06-supervisor-graph.ipynb  07-end-to-end-run.ipynb  08-retrieval-benchmark.ipynb
outputs/: evidence_traceability.json  tech_strategy_report.md
workflows/: __init__.py  clients.py  config.py  generation_eval.py  nodes.py  reporting.py  retrieval.py  retrieval_benchmark.py  semiconductor_strategy_clients.py  semiconductor_strategy_nodes.py  semiconductor_strategy_reporting.py  semiconductor_strategy_retrieval.py  semiconductor_strategy_shared.py  semiconductor_strategy_sources.py  semiconductor_strategy_text.py  semiconductor_strategy_workflow.py  shared.py  sources.py  text.py  workflow.py
