[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semiconductor-strategy-agent"
version = "0.1.0"
description = "Supervisor-based semiconductor R&D competitive analysis workflow for SK hynix."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.1",
    "reportlab>=4.2.5",
]

[project.scripts]
semiconductor-strategy = "app:main"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["workflows*"]

[tool.uv]
package = true
