[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semiconductor-strategy-agent"
version = "0.1.0"
description = "Supervisor-based semiconductor R&D competitive analysis workflow for SK hynix."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.1",
    "pymupdf>=1.24.0",
    "pypdf>=5.0.0",
    "reportlab>=4.2.5",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]

[project.scripts]
semiconductor-strategy = "app:main"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["workflows*"]

[tool.uv]
package = true
